fixing up the text-align of the "WHY BARCELONA?" for smaller screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -218,9 +218,11 @@ footer a {
   }
   main h2 {
     font-size: 13px;
+    text-align: center;
   }
   main h3 {
     font-size: 25px;
+    text-align: center;
   }
   main p {
     font-size: 14px;
